@startuml
left to right direction



abstract class jerrymouse.dto.AbstractResponse {
+ {abstract}void write(String,String)
}
interface jerrymouse.dto.IRequest {
~ String getUrl()
~ String getMethod()
}

abstract class jerrymouse.dto.adaptor.JerryMouseResponseAdaptor {

}


abstract class jerrymouse.dto.adaptor.JerryMouseRequestAdaptor {

}
interface jerrymouse.dto.IResponse {
~ void write(String,String)
~ void write(String)
}

class jerrymouse.dto.JerryMouseRequest {
- String method
- String url
}

class jerrymouse.dto.JerryMouseResponse {
- ChannelHandlerContext context
+ void write(String,String)
}

class jerrymouse.bootstrap.JerryMouseServerHandler {
- IServletManager servletManager
- IRequestDispatcher requestDispatcher
+ void channelRead(ChannelHandlerContext,Object)
+ void channelReadComplete(ChannelHandlerContext)
+ void exceptionCaught(ChannelHandlerContext,Throwable)
}

class jerrymouse.bootstrap.JerryMouseBootstrap {
~ Logger logger
- {static} String LOCAL_HOST
- {static} int DEFAULT_PORT
- int port
- JerryMouseThreadPoolUtil threadPool
- IRequestDispatcher requestDispatcher
- IServletManager servletManager
+ void start()
+ void startService()
}

class jerrymouse.servlet.JerryMouseHttpTestServlet {
# void doGet(HttpServletRequest,HttpServletResponse)
# void doPost(HttpServletRequest,HttpServletResponse)
}
class jerrymouse.servlet.JerryMouseHttpTest2Servlet {
# void doGet(HttpServletRequest,HttpServletResponse)
# void doPost(HttpServletRequest,HttpServletResponse)
}

abstract class jerrymouse.servlet.AbstractJerryMouseServlet {
# {abstract}void doGet(HttpServletRequest,HttpServletResponse)
# {abstract}void doPost(HttpServletRequest,HttpServletResponse)
# void service(HttpServletRequest,HttpServletResponse)
}

class jerrymouse.servlet.manager.WebXmlServletManager {
- IServletManager manager
- void loadFromWebXml()
+ void register(String,HttpServlet)
+ HttpServlet getServlet(String)
}

class jerrymouse.servlet.manager.DefaultServletManager {
# Map<String,HttpServlet> servletMap
+ void register(String,HttpServlet)
+ HttpServlet getServlet(String)
}

interface jerrymouse.servlet.manager.IServletManager {
~ void register(String,HttpServlet)
~ HttpServlet getServlet(String)
}

interface jerrymouse.dispatcher.IRequestDispatcher {
~ void dispatch(RequestDispatcherContext)
}

class jerrymouse.dispatcher.ServletRequestDispatcher {
+ void dispatch(RequestDispatcherContext)
}







class jerrymouse.dispatcher.RequestDispatcherManager {
- IRequestDispatcher emptyRequestDispatcher
- IRequestDispatcher staticHtmlRequestDispatcher
- IRequestDispatcher servletRequestDispatcher
+ void dispatch(RequestDispatcherContext)
}





class jerrymouse.dispatcher.StaticHtmlRequestDispatcher {
+ void dispatch(RequestDispatcherContext)
}

class jerrymouse.dispatcher.RequestDispatcherContext {
- IRequest request
- IResponse response
- IServletManager servletManager
}

class jerrymouse.threadpool.JerryMouseThreadPoolUtil {
- {static} JerryMouseThreadPoolUtil instance
- {static} ExecutorService executor
- {static} int CAPACITY
- {static} int CORE_POOL_SIZE
- {static} int MAX_POOL_SIZE
- {static} long KEEP_ALIVE_TIME
+ {static} JerryMouseThreadPoolUtil get()
+ void execute(Runnable)
+ void submit(Runnable)
+ void shutdown()
}





class jerrymouse.dispatcher.EmptyRequestDispatcher {
+ void dispatch(RequestDispatcherContext)
}


class jerrymouse.exception.JerryMouseException {
}
class jerrymouse.utils.JerryMouseHttpUtils {
+ {static} String http200Resp(String)
+ {static} String http404Resp()
+ {static} String http500Resp()
+ {static} String http500Resp(Exception)
}

class jerrymouse.utils.JerryMouseRequestUtils {
+ {static} RequestInfoBo buildRequestInfoBo(String)
}

class jerrymouse.utils.JerryMouseResourceUtils {
- {static} String os
+ {static} String getClassRootResource(Class<?>)
+ {static} String buildFullPath(String,String)
}


class jerrymouse.utils.JerryMouseFileUtils {
+ {static} String getFileContent(String)
}

class jerrymouse.bo.RequestInfoBo {
- String url
- String method
+ String toString()
}

jerrymouse.dto.adaptor.JerryMouseResponseAdaptor <|-- jerrymouse.dto.AbstractResponse
jerrymouse.servlet.AbstractJerryMouseServlet <|-- jerrymouse.servlet.JerryMouseHttpTestServlet
javax.servlet.http.HttpServletRequest <|-- jerrymouse.dto.IRequest
jerrymouse.servlet.AbstractJerryMouseServlet <|-- jerrymouse.servlet.JerryMouseHttpTest2Servlet
javax.servlet.http.HttpServlet <|-- jerrymouse.servlet.AbstractJerryMouseServlet
jerrymouse.dispatcher.IRequestDispatcher <|.. jerrymouse.dispatcher.ServletRequestDispatcher
jerrymouse.servlet.manager.IServletManager <|.. jerrymouse.servlet.manager.WebXmlServletManager
jerrymouse.servlet.manager.IServletManager <|.. jerrymouse.servlet.manager.DefaultServletManager
io.netty.channel.ChannelInboundHandlerAdapter <|-- jerrymouse.bootstrap.JerryMouseServerHandler
jerrymouse.dispatcher.IRequestDispatcher <|.. jerrymouse.dispatcher.RequestDispatcherManager
jerrymouse.dto.IResponse <|.. jerrymouse.dto.adaptor.JerryMouseResponseAdaptor
jerrymouse.dto.IRequest <|.. jerrymouse.dto.adaptor.JerryMouseRequestAdaptor
jerrymouse.dispatcher.IRequestDispatcher <|.. jerrymouse.dispatcher.StaticHtmlRequestDispatcher
javax.servlet.http.HttpServletResponse <|-- jerrymouse.dto.IResponse
jerrymouse.dto.adaptor.JerryMouseRequestAdaptor <|-- jerrymouse.dto.JerryMouseRequest
jerrymouse.dto.AbstractResponse <|-- jerrymouse.dto.JerryMouseResponse
jerrymouse.dispatcher.IRequestDispatcher <|.. jerrymouse.dispatcher.EmptyRequestDispatcher
jerrymouse.exception.RuntimeException <|-- jerrymouse.exception.JerryMouseException

'jerrymouse.dispatcher.IRequestDispatcher -down -> jerrymouse.bootstrap.JerryMouseServerHandler

@enduml